--- a/UI/searchPage/style.css
+++ b/UI/searchPage/style.css
@@ -39,6 +39,9 @@ body{
     width:100%;
     height:50px;
     margin:30px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .input-box input{
@@ -74,6 +77,7 @@ body{
     cursor: pointer;
     display: flex;
     align-items: center;
+    order: -1;
     
 }
 
@@ -83,7 +87,7 @@ body{
 */
 .btn {
     position: absolute;
-    
+    left: 5px; /* Adjust the distance from the left */
     top: 50%;
     transform: translateY(-50%);
     background: transparent;
@@ -92,7 +96,7 @@ body{
     cursor: pointer;
     color: #fff;
     display: flex;
-    align-items: center;
+    align-items: center; 
 }
 
 .btn i {
