--- a/UI/searchPage/style.css
+++ b/UI/searchPage/style.css
@@ -36,16 +36,40 @@ body{
 
 .wrapper .input-box{
     position: relative;
-    width:100%;
+    width:80%;
     height:50px;
-    margin:30px 0px;
+    margin: 10px 20px 25px auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-bottom:2px solid rgba(255,255,255,.2);
 }
 
+
 .input-box input{
-    width: 80%;
+    width: 100%;
+    height:90%;
+    background:transparent;
+    border:none;
+    outline:none;
+    border:none;
+    padding: 5px 5px 5px 5px ;
+    font-size: 16px;
+    color:#fff;
+}
+.wrapper .input-box.search {
+    position: relative;
+    width: 88%;
+    height:50px;
+    margin: 40px 5px 20px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: none;
+}
+
+.wrapper .input-box.search .search-input {
+    width: 100%;;
     height:100%;
     background:transparent;
     border:none;
@@ -57,16 +81,17 @@ body{
     color:#fff;
 }
 
+
 .input-box input::placeholder{
     color:#fff;
 }
 
  .input-box i{
     position:absolute;
-    left: -25px;
+    left: -50px;
     top: 50%;
     transform:translateY(-50%);
-    font-size:20px;
+    font-size:25px;
 
 } 
 
@@ -77,17 +102,14 @@ body{
     cursor: pointer;
     display: flex;
     align-items: center;
-    order: -1;
+  
     
 }
 
-/* .input-box i {
-    font-size: 20px;
-}
-*/
+
 .btn {
     position: absolute;
-    left: 5px; /* Adjust the distance from the left */
+    left: 8px; /* Adjust the distance from the left */
     top: 50%;
     transform: translateY(-50%);
     background: transparent;
@@ -97,6 +119,7 @@ body{
     color: #fff;
     display: flex;
     align-items: center; 
+    font-size:25px;
 }
 
 .btn i {
